// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`returns zero bytes for empty file 1`] = `
"  
  Size limit: [32m[1m0 B[22m[39m
  Size:       [32m[1m0 B[22m[39m [90mwith all dependencies, minified and gzipped[39m
  
"
`;

exports[`returns zero bytes for empty file without gzip 1`] = `
"  
  Size limit: [32m[1m0 B[22m[39m
  Size:       [32m[1m0 B[22m[39m [90mwith all dependencies and minified[39m
  
"
`;

exports[`shows brotli text when brotli and gzip in config 1`] = `
"  
  Size limit:   [32m[1m1 KB[22m[39m
  Size:         [32m[1m-53 B[22m[39m [90mwith all dependencies, minified and brotli[39m
  Loading time: [32m[1m10 ms[22m[39m [90mon slow 3G[39m
  Running time: [32m[1m1 s  [22m[39m [90mon Snapdragon 410[39m
  Total time:   [32m[1m1.1 s[22m[39m
  
"
`;

exports[`shows brotli text when only brotli in config 1`] = `
"  
  Size limit:   [32m[1m1 KB[22m[39m
  Size:         [32m[1m-53 B[22m[39m [90mwith all dependencies, minified and brotli[39m
  Loading time: [32m[1m10 ms[22m[39m [90mon slow 3G[39m
  Running time: [32m[1m1 s  [22m[39m [90mon Snapdragon 410[39m
  Total time:   [32m[1m1.1 s[22m[39m
  
"
`;

exports[`shows debug 1`] = `
"{
  \\"cwd\\": \\"/tmp/\\",
  \\"configPath\\": \\"package.json\\",
  \\"checks\\": [
    {
      \\"limit\\": \\"200 B\\",
      \\"path\\": [
        \\"/packages/size-limit/test/fixtures/integration/index.js\\"
      ],
      \\"name\\": \\"index.js\\",
      \\"sizeLimit\\": 200,
      \\"webpackOutput\\": \\"/tmp/\\",
      \\"webpackConfig\\": {
        \\"entry\\": {
          \\"index\\": [
            \\"/packages/size-limit/test/fixtures/integration/index.js\\"
          ]
        },
        \\"output\\": {
          \\"path\\": \\"/tmp/\\"
        },
        \\"optimization\\": {
          \\"concatenateModules\\": true
        },
        \\"resolve\\": {
          \\"plugins\\": [
            {
              \\"topLevelLoader\\": {}
            }
          ]
        },
        \\"resolveLoader\\": {
          \\"plugins\\": [
            {}
          ]
        },
        \\"module\\": {
          \\"rules\\": [
            {
              \\"test\\": {},
              \\"use\\": \\"file-loader\\"
            },
            {
              \\"test\\": {},
              \\"exclude\\": {},
              \\"use\\": [
                \\"style-loader\\",
                \\"css-loader\\"
              ]
            },
            {
              \\"test\\": {},
              \\"use\\": [
                \\"style-loader\\",
                {
                  \\"loader\\": \\"css-loader\\",
                  \\"options\\": {
                    \\"modules\\": true
                  }
                }
              ]
            }
          ]
        },
        \\"plugins\\": [
          {
            \\"pluginDescriptor\\": {
              \\"name\\": \\"OptimizeCssAssetsWebpackPlugin\\"
            },
            \\"options\\": {
              \\"assetProcessors\\": [
                {
                  \\"phase\\": \\"compilation.optimize-chunk-assets\\",
                  \\"regExp\\": {}
                }
              ],
              \\"assetNameRegExp\\": {},
              \\"cssProcessorOptions\\": {},
              \\"cssProcessorPluginOptions\\": {}
            },
            \\"phaseAssetProcessors\\": {
              \\"compilation.optimize-chunk-assets\\": [
                {
                  \\"phase\\": \\"compilation.optimize-chunk-assets\\",
                  \\"regExp\\": {}
                }
              ],
              \\"compilation.optimize-assets\\": [],
              \\"emit\\": []
            },
            \\"deleteAssetsMap\\": {}
          }
        ]
      },
      \\"bundles\\": [
        \\"/tmp/index.js\\"
      ],
      \\"size\\": 31,
      \\"loadTime\\": 0.01,
      \\"runTime\\": 1,
      \\"time\\": 1.01,
      \\"passed\\": true
    }
  ],
  \\"failed\\": false
}
  
  Size limit:   [32m[1m200 B[22m[39m
  Size:         [32m[1m31 B [22m[39m [90mwith all dependencies, minified and gzipped[39m
  Loading time: [32m[1m10 ms[22m[39m [90mon slow 3G[39m
  Running time: [32m[1m1 s  [22m[39m [90mon Snapdragon 410[39m
  Total time:   [32m[1m1.1 s[22m[39m
  
"
`;

exports[`shows debug on error 1`] = `
"{
  \\"cwd\\": \\"/tmp/\\",
  \\"configPath\\": \\"package.json\\",
  \\"checks\\": [
    {
      \\"limit\\": \\"200 s\\",
      \\"path\\": [
        \\"/packages/size-limit/test/fixtures/internal-error/index.js\\"
      ],
      \\"name\\": \\"index.js\\",
      \\"timeLimit\\": 200
    }
  ],
  \\"watch\\": false
}
 ERROR  Add @size-limit/file plugin to Size Limit
"
`;

exports[`shows error on missed package.json 1`] = `
" ERROR  Size Limit didn’t find package.json.
        Create npm package and run Size Limit there.
"
`;

exports[`shows error on time bigger than limit 1`] = `
"  
  [31mTotal time limit has exceeded[39m
  Time limit:   [31m[1m1 s[22m[39m
  Size:         [31m[1m31 B [22m[39m [90mwith all dependencies, minified and gzipped[39m
  Loading time: [31m[1m10 ms[22m[39m [90mon slow 3G[39m
  Running time: [31m[1m1 s  [22m[39m [90mon Snapdragon 410[39m
  Total time:   [31m[1m1.1 s[22m[39m
  
  [33mTry to reduce size or increase limit in [1m\\"size-limit\\"[22m section of [1mpackage.json[22m[39m
"
`;

exports[`shows error when using brotli without webpack 1`] = `
" ERROR  Config option brotli needs @size-limit/webpack plugin
"
`;

exports[`shows help 1`] = `
"size-limit [OPTION]… [FILE]…
Check the real performance cost of your front-end project to users

Core options:
  --limit LIMIT  Set size or running time limit for files
  --json         Show results in JSON format
  --help         Display this help
  --watch        Runs in watch mode
  --debug        Show internal configs for issue report
  --version      Display version

Examples:
  size-limit
    Read configuration from package.json or .size-limit.json and check limit
  size-limit index.js
    Show the size of specific files
"
`;

exports[`shows migration guide for npm users 1`] = `
"Install Size Limit preset depends on type of the project

For application, where you send JS bundle directly to users
  npm install --save-dev @size-limit/preset-app
For frameworks, components and big libraries
  npm install --save-dev @size-limit/preset-big-lib
For small (< 10 KB) libraries
  npm install --save-dev @size-limit/preset-small-lib
Check out docs for more complicated cases
  https://github.com/ai/size-limit/
"
`;

exports[`shows migration guide for npm users: config 1, dep 0 1`] = `
"Install Size Limit preset depends on type of the project

For application, where you send JS bundle directly to users
  npm install --save-dev @size-limit/preset-app
For frameworks, components and big libraries
  npm install --save-dev @size-limit/preset-big-lib
For small (< 10 KB) libraries
  npm install --save-dev @size-limit/preset-small-lib
Check out docs for more complicated cases
  https://github.com/ai/size-limit/

You need to add size-limit dependency: npm install --save-dev size-limit
"
`;

exports[`shows migration guide for yarn users 1`] = `
"Install Size Limit preset depends on type of the project

For application, where you send JS bundle directly to users
  yarn add --dev @size-limit/preset-app
For frameworks, components and big libraries
  yarn add --dev @size-limit/preset-big-lib
For small (< 10 KB) libraries
  yarn add --dev @size-limit/preset-small-lib
Check out docs for more complicated cases
  https://github.com/ai/size-limit/
"
`;

exports[`shows size-limit dependency warning 1`] = `""`;

exports[`shows webpack-related help 1`] = `
"size-limit [OPTION]… [FILE]…
Check the real performance cost of your front-end project to users

Core options:
  --limit LIMIT  Set size or running time limit for files
  --json         Show results in JSON format
  --help         Display this help
  --watch        Runs in watch mode
  --debug        Show internal configs for issue report
  --version      Display version

Webpack options:
  --why              Show package content
  --save-bundle DIR  Put build files to check them by hand
  --clean-dir        Remove build files folder before start

Examples:
  size-limit
    Read configuration from package.json or .size-limit.json and check limit
  size-limit index.js
    Show the size of specific files with all file dependencies
  size-limit --why
    Show reasons why project have this size
"
`;

exports[`throws on --clean-dir argument without --save-bundle 1`] = `
" ERROR  Argument --clean-dir works only with --save-bundle argument
"
`;

exports[`throws on --save-bundle argument without webpack 1`] = `
" ERROR  Argument --save-bundle works only with @size-limit/webpack plugin
"
`;

exports[`throws on --why argument without webpack 1`] = `
" ERROR  Argument --why works only with @size-limit/webpack plugin.
        You can add Bundle Analyzer to you own bundler.
"
`;

exports[`throws on empty config 1`] = `
" ERROR  Size Limit config must not be empty

  \\"size-limit\\": [
    {
      \\"path\\": \\"dist/bundle.js\\",
      \\"limit\\": \\"10 KB\\"
    }
  ]
"
`;

exports[`throws on gzip option without gzip plugin 1`] = `
" ERROR  Config option gzip needs @size-limit/webpack or @size-limit/file plugin
"
`;

exports[`throws on no config 1`] = `
" ERROR  Create Size Limit config in package.json

  \\"size-limit\\": [
    {
      \\"path\\": \\"dist/bundle.js\\",
      \\"limit\\": \\"10 KB\\"
    }
  ]
"
`;

exports[`throws on non-array config 1`] = `
" ERROR  Size Limit config must contain an array

  \\"size-limit\\": [
    {
      \\"path\\": \\"dist/bundle.js\\",
      \\"limit\\": \\"10 KB\\"
    }
  ]
"
`;

exports[`throws on non-object check 1`] = `
" ERROR  Size Limit config array should contain only objects

  \\"size-limit\\": [
    {
      \\"path\\": \\"dist/bundle.js\\",
      \\"limit\\": \\"10 KB\\"
    }
  ]
"
`;

exports[`throws on non-string entry 1`] = `
" ERROR  The entry in Size Limit config must be a string or an array of strings
"
`;

exports[`throws on non-string path 1`] = `
" ERROR  The path in Size Limit config must be a string or an array of strings

  \\"size-limit\\": [
    {
      \\"path\\": \\"dist/bundle.js\\",
      \\"limit\\": \\"10 KB\\"
    }
  ]
"
`;

exports[`throws on running option without time plugin 1`] = `
" ERROR  Config option running needs @size-limit/time plugin
"
`;

exports[`throws on time limit without time plugin 1`] = `
" ERROR  Add @size-limit/time plugin to use time limit
"
`;

exports[`throws on unknown argument 1`] = `
" ERROR  Unknown argument --unknown.
        Check command for typo and read docs.
"
`;

exports[`throws on unknown option 1`] = `
" ERROR  Unknown option unknown in config.
        Check Size Limit docs and version.
"
`;

exports[`throws on webpack option without webpack plugin 1`] = `
" ERROR  Config option webpack needs @size-limit/webpack plugin
"
`;

exports[`throws on webpack option without webpack plugin 2`] = `
" ERROR  Config option ignore needs @size-limit/webpack plugin
"
`;

exports[`throws on webpack option without webpack plugin 3`] = `
" ERROR  Config option config needs @size-limit/webpack plugin
"
`;

exports[`uses dependencies to detect plugins 1`] = `
"size-limit [OPTION]… [FILE]…
Check the real performance cost of your front-end project to users

Core options:
  --limit LIMIT  Set size or running time limit for files
  --json         Show results in JSON format
  --help         Display this help
  --watch        Runs in watch mode
  --debug        Show internal configs for issue report
  --version      Display version

Webpack options:
  --why              Show package content
  --save-bundle DIR  Put build files to check them by hand
  --clean-dir        Remove build files folder before start

Examples:
  size-limit
    Read configuration from package.json or .size-limit.json and check limit
  size-limit index.js
    Show the size of specific files with all file dependencies
  size-limit --why
    Show reasons why project have this size
"
`;

exports[`works in integration test in watch 1`] = `
"  
  Size limit:   [32m[1m200 B[22m[39m
  Size:         [32m[1m31 B [22m[39m [90mwith all dependencies, minified and gzipped[39m
  Loading time: [32m[1m10 ms[22m[39m [90mon slow 3G[39m
  Running time: [32m[1m1 s  [22m[39m [90mon Snapdragon 410[39m
  Total time:   [32m[1m1.1 s[22m[39m
  
"
`;

exports[`works in integration test with ESM 1`] = `
"  
  Size limit: [32m[1m1 B[22m[39m
  Size:       [32m[1m1 B[22m[39m [90mwith all dependencies, minified and gzipped[39m
  
"
`;

exports[`works in integration test with JSON 1`] = `
"[
  {
    \\"name\\": \\"index.js\\",
    \\"passed\\": true,
    \\"size\\": 31,
    \\"running\\": 1,
    \\"loading\\": 0.01
  }
]
"
`;

exports[`works in integration test with size 1`] = `
"  
  Size limit:   [32m[1m200 B[22m[39m
  Size:         [32m[1m31 B [22m[39m [90mwith all dependencies, minified and gzipped[39m
  Loading time: [32m[1m10 ms[22m[39m [90mon slow 3G[39m
  Running time: [32m[1m1 s  [22m[39m [90mon Snapdragon 410[39m
  Total time:   [32m[1m1.1 s[22m[39m
  
"
`;

exports[`works in integration test with time 1`] = `
"  
  Time limit:   [32m[1m2 s[22m[39m
  Size:         [32m[1m31 B [22m[39m [90mwith all dependencies, minified and gzipped[39m
  Loading time: [32m[1m10 ms[22m[39m [90mon slow 3G[39m
  Running time: [32m[1m1 s  [22m[39m [90mon Snapdragon 410[39m
  Total time:   [32m[1m1.1 s[22m[39m
  
"
`;
